[package]
name = "khaldron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9", features = ["dynamic"] } # Revert dynamic feature before release
bevy_editor_pls = "0.2.0"
bevy_ninepatch = "0.9.1"
bevy_rapier2d = "0.20.0"
